# tinyEmailServer

./: LICENSE  README.md  TodoList.md
code/: CMakeLists.txt
code/include/common/: CEmailServerProtoHandler.h  CProtoCode.h  ProtoUtil.cpp  ProtoUtil.h
code/include/common/config/: user_info.cpp  user_info.h
code/include/database/: CMemDataBase.cpp  CMemDataBase.h  DataBaseInterface.h  SqliteDataBase.cpp  SqliteDataBase.h
code/include/handler/: CImapServerHandler.h  CNetServerHandler.cpp  CNetServerHandler.h  CPop3ServerHandler.cpp  CPop3ServerHandler.h  CSmtpServerHandler.cpp  CSmtpServerHandler.h
code/include/imap/: CImapProtoCmd.h  imap_server_handler.cpp  imap_server_handler.h
code/include/log/: LogBase.cpp  LogBase.h  tiny_email_default_log.h  tiny_email_use_spdlog.h
code/include/network/: networkHandler.h
code/include/network/tcpClient/: CTcpClient.cpp  CTcpClient.h
code/include/pop3/: CPop3ProtoCmd.cpp  CPop3ProtoCmd.h  pop3_server_handler.cpp  pop3_server_handler.h
code/include/proto/imap/: CImapProtoCmd.cpp  imap_server_handler.cpp  imap_server_handler.h
code/include/proto/pop3/: pop3_server_handler.cpp  pop3_server_handler.h
code/include/proto/smtp/: CProtoCmd.cpp  CProtoCmd.h  smtp_server_handler.cpp  smtp_server_handler.h
code/include/smtp/: CProtoCmd.h  smtp_server_handler.cpp  smtp_server_handler.h
code/src/: data_base_demo.cpp  main.cpp  pop3_server.cpp  pop3_server.h  smtp_server.cpp  smtp_server.h
code/src/asio_email_server/: CEmailServer.cpp  CEmailServer.h  CMakeLists.txt  CTcpServer.h  NewEmailServer.h  OldEmailServer.h  main.cpp  thirdLib.h
code/src/asio_email_server/handler/: CImapServerHandler.cpp  CImapServerHandler.h  CPop3ServerHandler.cpp  CPop3ServerHandler.h  CSmtpServerHandler.cpp  CSmtpServerHandler.h
code/src/asio_email_server/network/: net_handler.cpp  net_handler.h
code/src/asio_email_server/network/tcpClient/: CTcpClient.cpp  CTcpClient.h
code/src/database_demo/: CMakeLists.txt  data_base_demo.cpp
code/src/log_demo/: CMakeLists.txt  log_demo.cpp
code/src/socket_cpp_email_server/: CMakeLists.txt  main.cpp  pop3_server.cpp  pop3_server.h  smtp_server.cpp  smtp_server.h
code/src/test_demo/: CMakeLists.txt  database_test.cpp  imap_proto_test.cpp  pop3_proto_test.cpp  proto_util_test.cpp  smtp_proto_test.cpp  test_demo.cpp
