cmake_minimum_required(VERSION 3.0)
project(log_demo)
set(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_FLAGS "-g")
include_directories(../../include/log/)
include_directories(../../include/thirdparty/spdlog/include/)
include_directories(../../include/thirdparty/fmt/include/)
SET(LOG_FILE ../../include/log/LogUtil.cpp)
add_executable(log_demo ./log_demo.cpp ${LOG_FILE})
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../../bin)
project(use_spdlog_demo)
add_definitions(-D_USE_SPD_LOG_)
set(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_FLAGS "-g")
include_directories(../../include/log/)
include_directories(../../include/thirdparty/spdlog/include/)
include_directories(../../include/thirdparty/fmt/include/)
SET(LOG_FILE ../../include/log/LogUtil.cpp)
add_executable(use_spdlog_demo ./log_demo.cpp ${LOG_FILE})
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../../bin)
