cmake_minimum_required(VERSION 3.0)
project(test_demo)
set(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_FLAGS "-g")
include_directories(../../include/thirdparty/doctest/)
include_directories(../../include/common/)
include_directories(../../include/pop3/)
add_executable(test_demo ./test_demo.cpp ./proto_util_test.cpp ../../include/common/ProtoUtil.cpp ../../include/pop3/CPop3ProtoCmd.cpp)